# gdp_forecast_project

./: README.md
app_api/: .gitignore  Dockerfile  read_buckets.json  requirements.txt  run.sh
app_api/api/: __main__.py  application.py  config.py  functions.py  lists.py  views.py
app_api/api/schemas/: country_values.py  group_values.py  predictions.py  region_values.py  top_comparison_values.py
app_frontend/: Dockerfile  requirements.txt
app_frontend/frontend/: components.py  functions.py  main.py  settings.py
deploy/: docker-compose.yml
gdp-time-series/: .env.default  README.md  pyproject.toml
gdp-time-series/conf/base/: catalog.yml  logging.yml
gdp-time-series/docs/source/: conf.py  index.rst
gdp-time-series/notebooks/: Model_experimentation.ipynb  Untitled.ipynb  Untitled1.ipynb
gdp-time-series/notebooks/darts_logs/2023-10-12_13_31_43_torch_model_run_29756/logs/: events.out.tfevents.1697128320.DESKTOP-28FM47R  events.out.tfevents.1697128384.DESKTOP-28FM47R  events.out.tfevents.1697128417.DESKTOP-28FM47R  events.out.tfevents.1697128430.DESKTOP-28FM47R  hparams.yaml  (+1 more)
gdp-time-series/notebooks/mlruns/0/: meta.yaml
gdp-time-series/src/: requirements.txt  setup.py
gdp-time-series/src/gdp_time_series/pipelines/feature_pipeline/: pyproject.toml
gdp-time-series/src/gdp_time_series/pipelines/feature_pipeline/json_files/: continents_regions.json  economic_groups.json  mice_groups.json  missing_countries.json
gdp-time-series/src/gdp_time_series/pipelines/prediction_pipeline/: pyproject.toml
gdp-time-series/src/tests/: test_run.py
(+98 files in other folders)
