[tool.poetry]
name = "prediction-pipeline"
version = "0.1.0"
description = ""
authors = ["Lucas Carvalho <lucas.carvalho@indicium.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
hopsworks = "^3.2.0"
python-dotenv = "^1.0.0"
darts = "^0.26.0"
google-cloud-storage = "^2.12.0"
fire = "^0.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
